AX: VoiceOver cannot navigate this page because Safari is taking too long https://bugs.webkit.org/show_bug.cgi?id=42219

Canonical link: https://commits.webkit.org/54199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63350 268f45cc-cd09-0410-ab3c-d52691b4dbfc